--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
 
         console.log("Loyalty number added to receipt: " + loyaltyNumber);
         clearLoyaltyNumber();
+        window.close(); // Close the current window
       });
     }
   </script>
