--- a/index.html
+++ b/index.html
@@ -47,8 +47,12 @@
     .keypad button:active {
       background-color: #3e8e41;
     }
+    .actions {
+      display: flex;
+      justify-content: center;
+    }
     .actions button {
-      width: 100%;
+      width: 150px;
       height: 40px;
       font-size: 16px;
       border-radius: 3px;
