--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Customer Loyalty Number</title>
+  <title>COMBASE KORONA.pos Client Loyalty Number</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -47,6 +48,9 @@
     .keypad button:active {
       background-color: #3e8e41;
     }
+    .actions {
+      margin-top: 20px;
+    }
     .actions button {
       width: 100%;
       height: 40px;
@@ -62,6 +66,11 @@
     }
     .actions button:active {
       background-color: #1976d2;
+    }
+    .debug {
+      text-align: left;
+      font-size: 12px;
+      margin-top: 20px;
     }
   </style>
 </head>
@@ -85,10 +94,11 @@
     <div class="actions">
       <button onclick="submitLoyaltyNumber()">Submit</button>
     </div>
+    <pre id="debug" class="debug"></pre>
   </div>
 
   <script src="korona-plugin-api.js"></script>
-  <script>
+  <script type="text/javascript">
     var loyaltyNumberElement = document.getElementById("loyaltyNumber");
     var loyaltyNumber = "";
 
@@ -112,7 +122,8 @@
 
         console.log("Loyalty number added to receipt: " + loyaltyNumber);
         clearLoyaltyNumber();
-        window.close(); // Close the current window
+
+        korona_plugin_api.backToKorona();
       });
     }
   </script>
